Continue work on burst MDOP implementation.